# Milestone-2-Personal-Portfolio

./: .gitignore  ANIMATIONS_COMPLETE.md  ANIMATIONS_FINAL_SUMMARY.md  AUDIT_REPORT.md  BENTO_GRID_IMPLEMENTATION.md  CHATBOT_UPGRADE_COMPLETE.md  COMPLETE_TESTING_REPORT.md  TESTING_REPORT.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
chatbot-agent/: .env.example  .gitignore  Dockerfile  README.md  agent.py  main.py  pyproject.toml  requirements.txt
src/: data.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
src/app/about/: layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/blog/: page.tsx
src/app/blog/[id]/: page.tsx
src/app/components/: auto scroll.tsx  bento-projects.tsx  bento-skills.tsx  bento-stats.tsx  bento-testimonials.tsx  blog.tsx  cards.tsx  chatbot.tsx  contact-form.tsx  cv-modal.tsx  enhanced-card.tsx  error-boundary.tsx  experience-counter.tsx  filterable-projects.tsx  footer.tsx  hero.tsx  home.module.css  loading-spinner.tsx  navbar.tsx  scroll-to-top.tsx  skills.tsx  stats-counter.tsx  testimonials.tsx  theme-toggle.tsx  with-suspense.tsx
src/app/contact/: page.tsx
src/app/portfolio/: page.tsx
src/data/: blog.ts
src/utils/: metadata.ts
