[project]
name = "portfolio-chatbot"
version = "1.0.0"
description = "AI-powered portfolio chatbot using OpenAI Agents SDK with Gemini LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "openai-agents>=0.0.15",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.4",
    "httpx>=0.28.1",
    "openai>=1.76.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 7860"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
